--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "eucalipto",
   "version": "0.0.1",
   "description": "most human bot on discord.",
-  "main": "app.js",
+  "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
